@@ -275,6 +275,8 @@ fixed
 
 279027 - s390x: Provide support for CLCL and MVCL instructions
 
+281883 - s390x: Fix system call wrapper for "clone".
+
 
 Release 3.6.1 (16 February 2011)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
